--- a/report.html
+++ b/report.html
@@ -1628,22 +1628,22 @@ storage = function () {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,4,[],[1,0,60712],[],[[5,0,0,[6,7],[1,13842,46869],[]]],[],[1,1,0,0]];
+window.output["suite"] = [1,2,3,4,[],[1,0,52706],[],[[5,0,0,[6,7],[1,14373,38331],[]]],[],[1,1,0,0]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*Recurre Month Lunch","*C:\\Users\\Alejandro\\Desktop\\CMS_Recurrence_Monthly\\Recurre_Month_Lunch.robot","*Recurre_Month_Lunch.robot","*<p>CMS-Engage360 Community Waterford\x3c/p>","*PR01 Automation to enter Community Waterford Recurrence Monthly (Lunch)","*Case 1","*Validation Test"]);
+window.output["strings"] = window.output["strings"].concat(["*","*Recurre Month Dinner","*C:\\Users\\Alejandro\\Desktop\\CMS_Recurrence_Monthly\\Recurre_Month_Dinner.robot","*Recurre_Month_Dinner.robot","*<p>CMS-Engage360 Community Waterford\x3c/p>","*PR01 Automation to enter Community Waterford Recurrence Monthly (Dinner)","*Case 1","*Validation Test"]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:00:47","fail":0,"label":"All Tests","pass":1,"skip":0}],[{"elapsed":"00:00:47","fail":0,"label":"Case 1","pass":1,"skip":0},{"elapsed":"00:00:47","fail":0,"label":"Validation Test","pass":1,"skip":0}],[{"elapsed":"00:01:01","fail":0,"id":"s1","label":"Recurre Month Lunch","name":"Recurre Month Lunch","pass":1,"skip":0}]];
+window.output["stats"] = [[{"elapsed":"00:00:38","fail":0,"label":"All Tests","pass":1,"skip":0}],[{"elapsed":"00:00:38","fail":0,"label":"Case 1","pass":1,"skip":0},{"elapsed":"00:00:38","fail":0,"label":"Validation Test","pass":1,"skip":0}],[{"elapsed":"00:00:53","fail":0,"id":"s1","label":"Recurre Month Dinner","name":"Recurre Month Dinner","pass":1,"skip":0}]];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1662668400024;
+window.output["baseMillis"] = 1663687987199;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 60747;
+window.output["generated"] = 52726;
 </script>
 <script type="text/javascript">
 window.output["expand_keywords"] = null;
